objects/FSL__SLR_Cache__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__From__c</fullName>
        <label>From</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Time__c</fullName>
        <label>Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__To__c</fullName>
        <label>To</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <label>SLR Cache</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLR-C-{0000}</displayFormat>
        <label>SLR Cache Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLRS Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>